test/lexerTest/fail/test5.ic
var Jack = new String();
int num = 1000
function(): return ["This String"];
